# rust-rpico2-embassy-examples-app

./: .gitignore  Cargo.toml  README.md  download_firmware.sh
.cargo/: config.toml
examples/: adxl345_i2c.rs  blinky.rs  dht11.rs  ds18b20.rs  hs3003_i2c.rs  matter_wifi_light.rs  zermatt.rs  zermatt_snow.rs
